--- a/frontend/src/pages/Form/SimulationForm.module.css
+++ b/frontend/src/pages/Form/SimulationForm.module.css
@@ -1,10 +1,37 @@
 
-  .underline {
-    color: rgb(34 197 94);
-   }
-   .custom-tab-container .nav-link {
-    margin-bottom: 26px;
-   }
-   .nav-link.active {
-    border-color: green !important;
-   }
+.saveButton {
+  background-color: white !important;
+  border-color: #fa6343 !important;
+  color: #fa6343 !important;
+  margin-right: 0.5rem !important;
+}
+
+.submitButton {
+  background-color: #fa6343 !important;
+  border-color: #fa6343!important;  
+  margin-right: 0.5rem !important;  
+}
+
+.formButtons {  
+  background-color:whitesmoke;  
+  display: table-cell;
+  vertical-align: bottom!important;  
+  
+}
+
+.submissionButtons {
+  display: inline-flex!important;
+  margin-left: 50px;
+}
+
+.marginLeftRight10 {    
+  margin: 0px 10px 0px 10px;
+}
+
+.left {
+  margin-left: calc(25% - 10px);
+  height: 40px;
+  margin-top: 4px;
+  overflow: hidden;
+  width: auto;
+}
