--- a/frontend/src/pages/Form/SimulationForm.module.css
+++ b/frontend/src/pages/Form/SimulationForm.module.css
@@ -4,7 +4,6 @@
   color: #FF5925;
   border: 1px solid;
   margin-right: 0.5rem;
-
   width: Hug (96px)px;
   height: Hug (25px)px;
   padding: 4px 8px 4px 8px;
@@ -129,7 +128,16 @@
 }
 
 .movementTab {
-  display: flex;
+  margin: auto;
+  width: 770px;
+  height: 41px;
+  gap: 0px;
+  justify-content: space-between;
+  opacity: 0px;
+}
+
+.movementTab2 {
+  margin-left: 90px;
 }
 
 .officeTab {
@@ -153,4 +161,9 @@
 .formTabDisabled {
   pointer-events: none;
   opacity: 0.7;
+}
+
+.movementTabSelectedListSection {
+  margin-top: 24px;
+  margin-left: 250px;
 }
