--- a/frontend/src/components/FormComponents.module.css
+++ b/frontend/src/components/FormComponents.module.css
@@ -206,7 +206,7 @@
   border-radius: 0px 0px 4px 4px;
   border: 1px 0px 0px 0px;
   opacity: 0px;
-  background-color: rgba(249, 248, 252, 1);
+  background-color: rgba(249, 248, 252, 1) !important;
   padding-top: 24px;
   gap: 8px;
 }
