--- a/frontend/src/components/FormComponents.module.css
+++ b/frontend/src/components/FormComponents.module.css
@@ -1,6 +1,6 @@
 .navBarText {
   
-  height: 22px;
+  /* height: 22px; */
   margin-left: 453px;
   font-family: Montserrat;
   font-size: 16px;
@@ -25,6 +25,13 @@
   font-weight: 600;
   line-height: 19.5px;
   text-align: left;
+}
+
+/* Ajout pour aligner les éléments de la barre de nav */
+.navbar-container {
+  display: flex;
+  align-items: center; 
+  justify-content: space-between; 
 }
 
 .marginTopLeft20 {
