--- a/frontend/src/pages/Dashboard.module.scss
+++ b/frontend/src/pages/Dashboard.module.scss
@@ -81,6 +81,18 @@
 //     // margin-bottom:50;
 // }
 
+/*pour l'affichage du nombre de formulaire par statut*/
+.labelValue {
+margin-right: 10px;
+color:$color-orange;
+}
+
+.labelSpacer {
+margin-right: 20px;
+}
+  
+
+
 .formTabButtons {
     height: 41px;
     gap: 0px;
