--- a/frontend/src/pages/Form/SimulationForm.module.scss
+++ b/frontend/src/pages/Form/SimulationForm.module.scss
@@ -1,8 +1,9 @@
+@import '../../styles/variables';
 
 .saveButton {
   background-color: white;
-  border-color: #FF5925;
-  color: #FF5925;
+  border-color: $color-orange;
+  color: $color-orange;
   border: 1px solid;
   margin-right: 0.5rem;
   width: Hug (96px)px;
@@ -11,12 +12,12 @@
   gap: 8px;
   border-radius: 3px 0px 0px 0px;
   opacity: 0px;
-  border: 1px solid rgba(255, 89, 37, 1);
+  border: 1px solid $color-orange;
 }
 
 .submitButton {
-  background-color: #FF5925;
-  border-color: #FF5925;
+  background-color: $color-orange;
+  border-color: $color-orange;
   margin-right: 0.5rem;
 
   width: Hug (93px)px;
@@ -28,8 +29,8 @@
 }
 
 .deleteButton {
-  background-color: #FF5925;
-  border-color: #FF5925;
+  background-color: $color-orange;
+  border-color: $color-orange;
   width: Hug (26px)px;
   height: Hug (25px)px;
   padding: 4px 8px 4px 8px;
@@ -74,7 +75,7 @@
 }
 
 .formTabCurrentEntry {
-  border-bottom-color: #FF5925;
+  border-bottom-color: $color-orange;
   border-bottom-style: solid;
   border-bottom-width: 0.2em;
   font-weight: 700;
@@ -116,7 +117,15 @@
 }
 
 .navBar {
-  background: rgba(249, 248, 252, 1);
+  background: $color-bluegrey;
+  display:flex;
+  flex-direction: column;
+  // align-items:'flex-end';
+  padding-top:10px;
+  padding-right:10px;
+  padding-left:10px;
+  padding-bottom: 0; /* Suppression du padding par défaut */
+  // height: auto; 
 }
 
 .generalTab {
@@ -167,4 +176,77 @@
 .movementTabSelectedListSection {
   margin-top: 24px;
   margin-left: 250px;
+}
+
+
+
+//Pour l'onglet sélectionné parmi A soumettre et Soumis
+.selectedButton {
+  border-top:0.1px solid $color-gray;
+  border-left:0.1px solid $color-gray;
+  border-right:0.1px solid $color-gray;
+  border-bottom: 2px solid $color-orange; 
+  font-size:16px;
+  font-weight: 700; 
+  color: $color-orange; 
+  background-color: white;
+  color:$color-blackgrey;
+  border-radius: 5px 5px 0 0;     
+}
+
+//Pour l'onglet non sélectionné parmi A soumettre et Soumis
+.unselectedButton {
+  background-color: $color-lightorange; 
+  border: none; 
+  color: $color-blackgrey; 
+  font-weight: 400; 
+  border-radius: 5px 5px 0 0; 
+}
+
+/*Mise en forme des informations au-dessus de GENERAL, DEPLACEMENT*/
+.pdfContainer{
+  margin: 10px 0; /* Espacement en-dessous et au-dessus du bouton PDF */
+  
+}
+
+.pdfButton{
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 2px 8px;
+  color: $color-orange;
+  border:1px solid $color-orange;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+  img{
+    margin-left:10px;
+  }
+
+.infoContainer {
+  display: flex;
+  gap:20px;  
+  margin-bottom: 10px;
+}
+
+.leftContainer {
+  display: flex;
+  margin:auto;
+  width:770px;
+  flex-direction: column; /* Aligne le PDF et les infos verticalement */
+  // margin-right: auto; /* Pousse le conteneur de droite (les boutons) vers la droite */
+}
+
+.label {
+  color: black; // Texte en noir
+  margin-right: 10px; // Espacement entre les lignes
+}
+
+.labelValue {
+  margin-right: 10px;
+  color: $color-orange; // Valeurs en orange
+}
+
+.labelSpacer {
+  margin-right: 20px; // Espacement supplémentaire si nécessaire
 }
