--- a/frontend/src/pages/Dashboard.module.scss
+++ b/frontend/src/pages/Dashboard.module.scss
@@ -5,6 +5,7 @@
     display:flex;
     align-items:'flex-end';
     padding-bottom: 0; /* Suppression du padding par défaut */
+    padding-top:24px;
     // height: auto; 
 }
 
