--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -7,3 +7,5 @@ $color-gray:#E7E7E7;
 $color-lightgray:#FBFBFB;
 $color-blackgrey:#3A3A3A;
 $color-bluegrey:#F7F5FF;
+
+$font-family: 'Montserrat', sans-serif;
