--- a/frontend/src/pages/Dashboard.module.scss
+++ b/frontend/src/pages/Dashboard.module.scss
@@ -187,15 +187,16 @@ th {
 
 /* boutons status */
 .customButton {
-width: 100%;
+
 height: 28px;
-padding: 10px;
+padding: 6px;
 display: flex;
 align-items: center;
 justify-content: center;
 font-size:14px;
 background-color:$color-orange ;
 border:none;
+border-radius:0.4;
 }
 
 .customButton:hover {
