--- a/frontend/src/pages/Form/SimulationForm.module.scss
+++ b/frontend/src/pages/Form/SimulationForm.module.scss
@@ -219,8 +219,8 @@
   border-radius: 4px;
 }
 
-.pdfButtonImg{
-  margin-left:10px;
+.pdfButtonImage{
+  margin-left:8px;
 }
 
 .infoContainer {
@@ -293,7 +293,7 @@ textarea::placeholder {
   color: white; /* Couleur du texte */
   border: none;
   border-radius: 4px;
-  padding: 10px 20px; /* Espacement à l'intérieur du bouton */
+  padding: 6px ; /* Espacement à l'intérieur du bouton */
   cursor: pointer;
 
   &:hover {
