--- a/frontend/src/components/FormComponents.module.scss
+++ b/frontend/src/components/FormComponents.module.scss
@@ -364,6 +364,16 @@
   color: #737373;
 }
 
+.required{
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: left;
+  color:$color-blackgrey;
+  margin-bottom:0;
+
+}
+
 .checkboxListFieldSubTitle,
 .boxDigitalFieldTitle,
 .boxSubTitle,
@@ -574,9 +584,13 @@
 }
 
 .subtitle {
-  font-size: 0.9em; 
-  color: $color-blackgrey; 
-  font-style:italic;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 14.63px;
+  text-align: left;
+  color: $color-blackgrey;
 }
 
 .nameCard{
